Fixed A Text-Wrap Issue

--- a/public/css/document.css
+++ b/public/css/document.css
@@ -28,7 +28,7 @@
   font-family: 'Ostrich Sans Rounded';
   font-weight: bold;
   color: gray;
-  padding-bottom: 2em;
+  padding-bottom: 1.8em;
 }
 
 form {
@@ -84,14 +84,14 @@ textarea {
 
 body {
   background-color: #ecf0f1; 
-  margin-left: 25%;
-  margin-right: 25%;
+  margin-left: 30%;
+  margin-right: 30%;
   margin-top: 5%;
 }
 
 h1 {
   font-family: 'Ostrich Sans Regular Black';
-  font-size: 4em;
+  font-size: 4.2em;
   color: #2c3e50;
   text-align: justify;
   white-space: nowrap; 
@@ -111,6 +111,5 @@ p {
   font-family: 'Ostrich Sans Rounded';
   color: black;
   font-size: 2em;
-  text-align: justify;
-  white-space: nowrap;
+  text-align: left;
 }
